# agri

./: .dockerignore  .env  .env.example  .gitignore  ORIG_HEAD  README.md  admin.py  app.py  config  create_admin.py  forms.py  index  main.py  models.py  pyproject.toml  requirements.txt  routes.py  utils.py  websocket_events.py
instance/: agri_auction.db  farm_auction.db
static/css/: style.css
static/js/: auction.js
templates/: auction_detail.html  auctions.html  base.html  create_auction.html  dashboard.html  error.html  index.html  login.html  payment.html  profile.html  register.html
